docs/deployment-guide/goals/k8s/v12-keycloak/nginx/integrated/consumer/consumer-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: consumer-ui
  name: consumer-ui
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: consumer-ui
